--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -89,5 +89,6 @@
     "memory_resource": "cpp",
     "stop_token": "cpp",
     "cinttypes": "cpp"
-  }
+  },
+  "C_Cpp.errorSquiggles": "Disabled"
 }
