improve cmake files, pull in googletest automatically

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,33 @@
-cmake_minimum_required(VERSION 3.10)
-project(othello)
+cmake_minimum_required(VERSION 3.14..3.20)
+project(othello VERSION 1.0
+                DESCRIPTION "Othello Game"
+                LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17)
-
-find_package(Boost REQUIRED COMPONENTS locale)
-if(Boost_FOUND)
-  include_directories(${Boost_INCLUDE_DIR})
-  message("-- Boost found: ${Boost_VERSION_STRING}")
-else()
-  message(FATAL_ERROR "Boost not found!")
+### Require out-of-source builds
+file(TO_CMAKE_PATH "${PROJECT_BINARY_DIR}/CMakeLists.txt" LOC_PATH)
+if(EXISTS "${LOC_PATH}")
+  message(FATAL_ERROR "You cannot build in a source directory (or any directory with a CMakeLists.txt file). Please make a build subdirectory. Feel free to remove CMakeCache.txt and CMakeFiles.")
 endif()
 
-include_directories(src)
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+  set(CMAKE_CXX_STANDARD 17)
+  set(CMAKE_CXX_EXTENSIONS OFF)
+  set(SANITIZER_FLAGS "-fsanitize=address -fno-omit-frame-pointer -O1 -fno-optimize-sibling-calls")
+  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${SANITIZER_FLAGS}")
+  include(CTest)
+endif()
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  GIT_TAG HEAD
+)
+FetchContent_MakeAvailable(googletest)
 
 add_subdirectory(src)
-add_subdirectory(test)
-add_subdirectory(lib/googletest)
+add_subdirectory(apps)
+
+if((CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME OR MODERN_CMAKE_BUILD_TESTING) AND BUILD_TESTING)
+  add_subdirectory(tests)
+endif()
