--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_executable(othello main.cpp)
+add_executable(othello othello.cpp)
 target_link_libraries(othello PRIVATE othello_lib)
+add_executable(othelloClient othelloClient.cpp)
