got client app working, don't use glob in cmake

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,3 @@
-file(GLOB SOURCE_LIST *.cpp)
-add_executable(othello_test ${SOURCE_LIST})
+add_executable(othello_test BoardTest.cpp PlayerTest.cpp ScoreTest.cpp testMain.cpp)
 target_link_libraries(othello_test PRIVATE othello_lib gtest gmock)
 add_test(NAME othello_test COMMAND othello_test)
