--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,5 +93,5 @@
     "filesystem": "cpp"
   },
   "C_Cpp.errorSquiggles": "Disabled",
-  "C_Cpp.clang_format_fallbackStyle": "{ ColumnLimit: 120, PointerAlignment: Left, AllowShortIfStatementsOnASingleLine: true, SpaceAfterTemplateKeyword: false, AlignOperands: false, ContinuationIndentWidth: 2  }"
+  "C_Cpp.clang_format_fallbackStyle": "{ ConstructorInitializerIndentWidth: 2, ColumnLimit: 120, PointerAlignment: Left, AllowShortIfStatementsOnASingleLine: true, SpaceAfterTemplateKeyword: false, AlignOperands: false, ContinuationIndentWidth: 2  }"
 }
