--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,3 +1,3 @@
-add_executable(othello othello.cpp)
+add_executable(othello othelloMain.cpp)
 target_link_libraries(othello PRIVATE othello_lib)
-add_executable(othelloClient othelloClient.cpp)
+add_executable(othelloClient OthelloClient.h OthelloClient.cpp othelloClientMain.cpp)
