--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,2 @@
-file(GLOB HEADER_LIST CONFIGURE_DEPENDS "${othello_SOURCE_DIR}/include/othello/*.h")
-file(GLOB SOURCE_LIST *.cpp)
-add_library(othello_lib ${SOURCE_LIST} ${HEADER_LIST})
+add_library(othello_lib Board.cpp Game.cpp Player.cpp Score.cpp)
 target_include_directories(othello_lib PUBLIC ../include)
