--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ include(FetchContent)
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG HEAD
+  GIT_TAG release-1.11.0
 )
 FetchContent_MakeAvailable(googletest)
 
