updated comment font and color

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,19 @@
 {
-  "editor.rulers": [80,120],
+  "editor.rulers": [
+    80
+  ],
+  "workbench.editor.enablePreview": false,
+  "editor.tokenColorCustomizations": {
+    "comments": "#525252",
+    "textMateRules": [
+      {
+        "scope": "comment",
+        "settings": {
+          "fontStyle": ""
+        }
+      }
+    ]
+  },
   "files.associations": {
     "array": "cpp",
     "__bit_reference": "cpp",
