enable and fix warnings for GCC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,19 +11,21 @@ endif()
 
 if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
   set(CMAKE_CXX_STANDARD 20)
-  set(CMAKE_CXX_EXTENSIONS OFF)
-  if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    # enable some warnings (skip -Wdeprecated and -Wconversion because of boost)
-    set(WARN_FLAGS "-Werror -W -Wall -Wunused -Wunreachable-code-aggressive")
-    # disable a warning
-    set(WARN_FLAGS "${WARN_FLAGS} -Wno-logical-op-parentheses")
+  # enable some warnings and turn them into errors (-W is the same as -Wextra)
+  # for boost skip -Wdeprecated and -Wconversion and add -Wno-unused-variable
+  set(WARN_FLAGS "-Werror -W -Wall -Wunused -Wno-unused-variable")
+  if(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+    # '-Wdeprecated' causes an error with GCC on line 918 in 'gtest-internal.h'
+    string(APPEND WARN_FLAGS " -Wunreachable-code-aggressive")
+    string(APPEND WARN_FLAGS " -Wno-logical-op-parentheses")
     set(SANITIZER_FLAGS "-fsanitize=address -fno-omit-frame-pointer -O1 \
 -fno-optimize-sibling-calls")
     # need to set env for stack: ASAN_OPTIONS=detect_stack_use_after_return=1
-    # set(SANITIZER_STACK_FLAGS "-fsanitize-address-use-after-scope")
-    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${SANITIZER_FLAGS} \
-${SANITIZER_STACK_FLAGS} ${WARN_FLAGS}")
+    # string(APPEND SANITIZER_FLAGS "-fsanitize-address-use-after-scope")
+  elseif(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+    string(APPEND WARN_FLAGS " -Wno-parentheses")
   endif()
+  string(APPEND CMAKE_CXX_FLAGS_DEBUG " ${SANITIZER_FLAGS} ${WARN_FLAGS}")
   include(CTest)
 endif()
 
@@ -31,6 +33,7 @@ include(FetchContent)
 FetchContent_Declare(
   googletest
   GIT_REPOSITORY https://github.com/google/googletest.git
+  # 1.11.0 was released on June 11, 2021 (or change to HEAD)
   GIT_TAG release-1.11.0
 )
 FetchContent_MakeAvailable(googletest)
